# simple-raytracer

./: .gitignore  CMakeLists.txt  README.md  raytracer.py
src/: Camera.h  Group.h  Hit.h  Image.cpp  Image.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Object3D.h  Plane.h  Ray.h  SceneParser.cpp  SceneParser.h  Sphere.h  Texture.h  Transform.h  Triangle.h  main.cpp
